--- a/index.html
+++ b/index.html
@@ -18,17 +18,27 @@
     <li class="styleli">swimming
         <li class="styleli">video games</li>
     </li>
-<button class="mybutton">More Interests</button>
-   </ul>  
+</ul>  
+
+<div>
+    <button class="mybutton">More Interests</button>
+</div>
 
     </div>
     ,<div>
        <h2>My Favorite Links</h2>
        <a href="https://www.minecraft.net/en-us">Minecraft</a>
     </div>
+
+    <div>
+        <h2>Photos I Love</h2>
+        <img src="Minecraft.jpg"alt="Minecraft pictue" class="images">
+        <img src="cristiano_ronaldo_cr7_with_cup_in_blur_stadium_background_is_wearing_white_sports_dress_hd_cristiano_ronaldo.jpg" alt="cristiano ronaldo" class="images">
+        <img src="Messi.jpg" alt="Messi" alt="Messi" class="images">
+        <img src="vini.jpg" alt="vini" alt="vini" class="images">
+       
+        </div>
+       
+
 </body>
 </html> 
-<div>
-<h2>Photos I Love</h2>
-<img src="Minecraft.jpg"alt="Minecraft pictue">
-</div>
