--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     <div>
        <h2>My Favorite Links</h2>
        <a href="https://www.Minecraft.net/en-us">Minecraft</a>
-        <a href="https//Poki.com">Poki</a>
-        <a href="https//Roblox.com">Roblox</a>
-        <a href="https//Craft world.com">Craft world</a>
-        <a href="https://www.Ea.com/games/Ea-sports-fc/fc-mobile">fcmobile</a>
+      <a href="https://www.Roblox.com">Roblox</a>
+       <a href="https://www.Ea.com/games/Ea-sports-fc/fc-mobile">fcmobile</a>
         <a href="https://www.Crazygames.com/">Crazy games</a>
     </div>
 
